force-app/main/default/objects/KimbleOne__BankAccount__c/KimbleOne__BankAccount__c.object-meta.xml
<CustomObject>
    <customHelpPage>KimbleOne__Help</customHelpPage>
    <label>Bank Account</label>
    <nameField>
        <label>Bank Account Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bank Accounts</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>