force-app/main/default/objects/KimbleOne__BankAccount__c/fields/KimbleOne__AccountName__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__AccountName__c</fullName>
    <label>Account Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>