force-app/main/default/objects/KimbleOne__BankAccount__c/fields/KimbleOne__BankName__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__BankName__c</fullName>
    <label>Bank Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>