force-app/main/default/objects/KimbleOne__BankAccount__c/fields/KimbleOne__BIC__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__BIC__c</fullName>
    <label>Swift BIC</label>
    <length>50</length>
    <type>Text</type>
</CustomField>