force-app/main/default/objects/KimbleOne__BankAccount__c/fields/KimbleOne__IBANCode__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__IBANCode__c</fullName>
    <label>IBAN Code</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>