force-app/main/default/objects/KimbleOne__BankAccount__c/fields/KimbleOne__SortCode__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__SortCode__c</fullName>
    <label>Sort Code</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>