force-app/main/default/objects/KimbleOne__BankAccount__c/fields/KimbleOne__SwiftCode__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__SwiftCode__c</fullName>
    <label>Z_Obsolete - Swift Code</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>